bug 18071  - add xform_repeat_label css class with top-alignement and small padding at the top
http://bugzilla.zimbra.com/show_bug.cgi?id=18071

Copied from Perforce
 Change: 71217

--- a/WebRoot/css/dwt.css
+++ b/WebRoot/css/dwt.css
@@ -1077,11 +1077,17 @@
   width:200px;
 }
 
+.xform_repeat_label,
 .xform_label,
 .xform_label_left {
 	@Label@
 	@TextPadding@
 	text-align:right;
+}
+
+.xform_repeat_label {
+	vertical-align:top;
+	padding-top:3px;
 }
 
 .xform_label_right {
